<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<!-- 银行卡 -->

		<LinearLayout
				style="@style/wyp_layout"
				android:orientation="vertical" >

				<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="40dp"
						android:orientation="horizontal" >

						<TextView
								android:id="@+id/wyp_txt_bank_name"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_gravity="center_vertical"
								android:textColor="@color/txt_normal"
								android:textSize="@dimen/wyp_txt_middle" />

						<TextView
								android:id="@+id/wyp_txt_card_type"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_gravity="center_vertical"
								android:layout_marginLeft="@dimen/wyp_space_middle"
								android:textColor="@color/txt_normal"
								android:textSize="@dimen/wyp_txt_middle" />
				</LinearLayout>

				<RelativeLayout
						android:layout_width="match_parent"
						android:layout_height="40dp" >

						<TextView
								android:id="@+id/wyp_txt_card_number_title"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/wyp_unloggedin_card_number"
								android:textColor="@color/txt_normal"
								android:textSize="@dimen/wyp_txt_middle" />

						<TextView
								android:id="@+id/wyp_txt_card_number"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_alignParentRight="true"
								android:layout_toRightOf="@id/wyp_txt_card_number_title"
								android:gravity="right"
								android:textColor="@color/txt_normal"
								android:textSize="@dimen/wyp_txt_middle" />
				</RelativeLayout>
		</LinearLayout>

		<!-- 持卡人姓名 -->

		<com.wangyin.payments.widget.input.WYPNameInput
				android:id="@+id/wyp_edit_name"
				style="@style/wyp_edit"
				android:layout_marginLeft="@dimen/wyp_space_middle"
				android:layout_marginRight="@dimen/wyp_space_middle"
				android:layout_marginTop="@dimen/wyp_space_middle"
				android:hint="@string/wyp_unloggedin_card_username" />

		<!-- 银行卡预留证件号码 -->

		<com.wangyin.payments.widget.input.WYPIdcardInput
				android:id="@+id/wyp_edit_idcard"
				style="@style/wyp_edit"
				android:layout_marginLeft="@dimen/wyp_space_middle"
				android:layout_marginRight="@dimen/wyp_space_middle"
				android:layout_marginTop="@dimen/wyp_space_middle"
				android:hint="@string/wyp_unloggedin_card_idcard" />

		<!-- 银行卡预留手机号码 -->

		<com.wangyin.payments.widget.input.WYPPhoneInput
				android:id="@+id/wyp_edit_mobile"
				style="@style/wyp_edit"
				android:layout_marginLeft="@dimen/wyp_space_middle"
				android:layout_marginRight="@dimen/wyp_space_middle"
				android:layout_marginTop="@dimen/wyp_space_middle"
				android:hint="@string/wyp_unloggedin_card_mobile" />

		<LinearLayout
				android:id="@+id/wyp_credit_card"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/wyp_space_middle"
				android:orientation="horizontal"
				android:visibility="gone" >

				<!-- 信用卡有效期 -->

				<com.wangyin.payments.widget.input.WYPValidDateInput
						android:id="@+id/wyp_edit_valid"
						style="@style/wyp_edit"
						android:layout_width="0dp"
						android:layout_marginLeft="@dimen/wyp_space_middle"
						android:layout_weight="3"
						android:hint="@string/wyp_unloggedin_card_valid" />

				<!-- 信用卡cvv2 -->

				<com.wangyin.payments.widget.input.WYPCVVInput
						android:id="@+id/wyp_edit_cvv2"
						style="@style/wyp_edit"
						android:layout_width="0dp"
						android:layout_marginLeft="@dimen/wyp_space_middle"
						android:layout_marginRight="@dimen/wyp_space_middle"
						android:layout_weight="2"
						android:hint="@string/wyp_unloggedin_card_cvv2" />
		</LinearLayout>

		<!-- 下一步按钮 -->

		<com.wangyin.payments.widget.button.WYPButton
				android:id="@+id/wyp_btn_sure"
				style="@style/wyp_btn_red"
				android:layout_marginBottom="@dimen/wyp_space_large"
				android:layout_marginLeft="@dimen/wyp_space_middle"
				android:layout_marginRight="@dimen/wyp_space_middle"
				android:layout_marginTop="@dimen/wyp_space_large"
				android:text="@string/wyp_unloggedin_next" />

</LinearLayout>