<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wyp_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="0dp" >

        <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/wyp_space_xxlarge"
                android:layout_margin="@dimen/wyp_space_large"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/wyp_dialog_giveup"
                android:textSize="@dimen/wyp_txt_large" />

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                        android:id="@+id/btn_cancel"
                        style="@style/wyp_btn_left"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:padding="0dp"
                        android:text="@string/wyp_cancel" />

                <Button
                        android:id="@+id/btn_sure"
                        style="@style/wyp_btn_right"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:text="@string/wyp_sure" />
        </LinearLayout>

</LinearLayout>